--- a/project-todo-app/src/app/pages/update-project/update-project.component.css
+++ b/project-todo-app/src/app/pages/update-project/update-project.component.css
@@ -8,3 +8,14 @@
     align-items: center;
     flex-direction: column;
 }
+.row {
+    width: 50%;
+}
+
+.w100 {
+    width: 100%;
+}
+
+.text-center {
+    text-align: center;
+}
