--- a/project-todo-app/src/app/pages/update-project/update-project.component.html
+++ b/project-todo-app/src/app/pages/update-project/update-project.component.html
@@ -5,7 +5,7 @@
             <div class="col-md-8 offset-md-2">
                 <form (ngSubmit)="update()">
                     <span class="error-msg-span">{{validationMessage.title}}</span>
-                    <mat-form-field  appearance="fill">
+                    <mat-form-field class="w100 text-center"  appearance="fill">
                         <mat-label>Enter Title</mat-label>
                         <input [(ngModel)]="Data.title" type="text" name="title" placeholder="Enter here" matInput />
                     </mat-form-field>                   
